# frel-spec

./: .gitignore  README.md  ai-instructions.md
compiler/: Cargo.toml
compiler/frel-cli/: Cargo.toml
compiler/frel-cli/src/: main.rs
compiler/frel-compiler-cli/: Cargo.toml
compiler/frel-compiler-cli/src/: main.rs
compiler/frel-compiler-core/: Cargo.toml
compiler/frel-compiler-core/src/: ast.rs  diagnostic.rs  error.rs  lexer.rs  lib.rs  parser.rs  source.rs  token.rs
compiler/frel-compiler-core/src/ast/: dump.rs  mod.rs  visitor.rs
compiler/frel-compiler-core/src/diagnostic/: codes.rs  format.rs  mod.rs  sink.rs
compiler/frel-compiler-core/src/lexer/: mod.rs  scan.rs  token.rs
compiler/frel-compiler-core/src/parser/: arena.rs  backend.rs  blueprint.rs  common.rs  contract.rs  decl.rs  enum_decl.rs  expr.rs  layout.rs  mod.rs  scheme.rs  theme.rs  types.rs
compiler/frel-compiler-core/src/semantic/: dump.rs  instructions.rs  mod.rs  module_analysis.rs  resolve.rs  scope.rs  signature.rs  signature_builder.rs  symbol.rs  typecheck.rs  types.rs
compiler/frel-compiler-plugin-javascript/: Cargo.toml
compiler/frel-compiler-plugin-javascript/src/: codegen.rs  lib.rs
compiler/frel-compiler-server/: Cargo.toml
compiler/frel-compiler-server/src/: api.rs  compiler.rs  events.rs  lib.rs  main.rs  server.rs  state.rs  watcher.rs
compiler/frel-compiler-test/: Cargo.toml
compiler/frel-compiler-test/src/: html_report.rs  main.rs
compiler/frel-core/: Cargo.toml
compiler/frel-core/src/: ast.rs  error.rs  frel.pest  parser.rs
compiler/frel-plugin-javascript/: Cargo.toml
compiler/frel-plugin-javascript/src/: codegen.rs  lib.rs
compiler/test-data/parser/: builtin.frel  test.backend.frel  test.blueprint.frel  test.common.frel  test.contract.frel  test.data.frel  test.scheme.frel  test.theme.frel
compiler/test-data/parser/arena/: arena_with_contract.frel  multiple_arenas.frel  simple_arena.frel
compiler/test-data/parser/backend/: complex_backend.frel  derived_fields.frel  simple_backend.ast.json  simple_backend.frel  simple_fields.frel  with_commands.frel  with_include.frel  with_methods.frel  with_methods_and_commands.frel  with_multiple_includes.frel  with_theme_ref.frel
compiler/test-data/parser/blueprint/: anonymous_blueprint_it.frel  blueprint_multiple_params.frel  blueprint_parameter.frel  blueprint_parameter_with_args.frel  complex_blueprint.frel  empty_blueprint.frel  fragment_with_args.frel  named_slots.frel  nested_fragments.frel  simple_text.frel  standard_blueprints.frel  with_backend.frel  with_backend_param.frel  with_default_parameters.frel  with_local_declarations.frel  with_multiple_parameters.frel  with_parameters.frel  with_tooltip.frel
compiler/test-data/parser/comprehensive/: full_app.frel
compiler/test-data/parser/contract/: contract_complex_types.frel  contract_mixed_methods.frel  contract_multiple_methods.frel  contract_no_params.frel  contract_with_void_methods.frel  multiple_contracts.frel  simple_contract.frel
compiler/test-data/parser/control/: control_combined.frel  repeat_nested.frel  repeat_simple.frel  repeat_with_index.frel  repeat_with_key.frel  select_boolean.frel  select_enum.frel  select_with_blocks.frel  when_expression.frel  when_nested.frel  when_simple.frel  when_with_else.frel
compiler/test-data/parser/edge_cases/: README.md  all_declaration_types.frel  deeply_nested.frel  empty_bodies.frel  long_identifiers.frel  many_instructions.frel  many_parameters.frel  unicode_identifiers.frel  whitespace_variations.frel
compiler/test-data/parser/enum/: empty_enum.frel  many_variants.frel  multiline_variants.frel  multiple_enums.frel  simple_enum.frel  single_variant.frel
compiler/test-data/parser/expressions/: arithmetic_operators.frel  collection_length.frel  comparison_operators.frel  complex_expressions.frel  contract_calls.frel  enum_access.frel  field_access.frel  literals_bool.frel  literals_collections.frel  literals_colors.frel  literals_floats.frel  literals_integers.frel  literals_strings.frel  logical_operators.frel  method_calls.frel  null_coalescing.frel  null_comparison.frel  optional_chaining.frel  string_interpolation.frel  ternary_operator.frel
compiler/test-data/parser/instructions/: chained_instructions.frel  decoration_background.frel  decoration_corner_radius.frel  decoration_cursor.frel  decoration_shadow.frel  decoration_tint.frel  event_handler_it.frel  event_handler_multiple_statements.frel  event_handlers.frel  focus_instructions.frel  instruction_expr_combined.frel  instruction_expr_reference.frel  instruction_expr_ternary.frel  instruction_expr_when.frel  layout_alignment.frel  layout_dimensions.frel  layout_fill_strategy.frel  layout_gap.frel  layout_position.frel  layout_scroll.frel  layout_spacing.frel  layout_surrounding.frel  pointer_events.frel  postfix_vs_inner.frel  stereotype_events.frel  stereotype_instructions.frel  text_font.frel  text_styling.frel  text_wrapping.frel
compiler/test-data/parser/layout/: basic.frel  complete.frel  empty_cells.frel  instructions.frel  merge.frel  modifiers.frel  sizes.frel
compiler/test-data/parser/module/: deeply_nested_module.frel  module_with_import_and_declaration.frel  module_with_multiple_imports.frel  module_with_single_import.frel  nested_module_path.frel  simple_module.frel  snake_case_segments.frel
compiler/test-data/runtime/: testing.frel
compiler/test-data/semantic/: parameter_backend_merge.js
dev/lsp/frel-lsp/: Cargo.toml  README.md
(+361 files in other folders)
