[workspace]
resolver = "2"

members = [
    "frel-compiler-core",
    "frel-compiler-plugin-javascript",
    "frel-compiler-cli",
    "frel-compiler-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Frel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frel-lang/frel"

[workspace.dependencies]

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
indexmap = "2.2"
