[workspace]
resolver = "2"

members = [
    "frel-compiler-core",
    "frel-compiler-plugin-javascript",
    "frel-compiler-cli",
    "frel-compiler-server",
    "frel-compiler-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Frel Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frel-lang/frel"

[workspace.dependencies]

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
indexmap = "2.2"

# Async/HTTP
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["sync", "time"] }

# File watching
notify = "6"

# Globbing
glob = "0.3"
