[package]
name = "frel-compiler-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "frelc"
path = "src/main.rs"

[dependencies]
frel-compiler-core = { path = "../frel-compiler-core" }
frel-compiler-plugin-javascript = { path = "../frel-compiler-plugin-javascript" }
anyhow.workspace = true
clap.workspace = true
