[package]
name = "frel-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Frel Contributors"]
license = "MIT OR Apache-2.0"
description = "Language Server Protocol implementation for Frel"

[[bin]]
name = "frel-lsp"
path = "src/main.rs"

[dependencies]
# LSP framework
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }

# Reuse compiler components
frel-core = { path = "../../../compiler/frel-core" }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
anyhow = "1.0"
